--- a/back-hotel/requirements.txt
+++ b/back-hotel/requirements.txt
@@ -13,10 +13,11 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
+pillow==10.2.0
 PyJWT==2.8.0
 PyMySQL==1.1.0
 python-dotenv==1.0.1
 SQLAlchemy==2.0.27
 typing_extensions==4.9.0
 Werkzeug==3.0.1
-pillow
+cryptography
