--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -57,7 +57,7 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: unit Test with pytest
+    - name: unit Test 
       run: |
         cd back-hotel
         python -m unittest test.test_unitaire_image
@@ -65,10 +65,13 @@ jobs:
         python -m unittest test.test_unitaire_booking
         python -m unittest test.test_unitaire_chambres
         python -m unittest test.test_unitaire_hotel
-    - name: integration Test with pytest
+    - name: integration Test 
       run: |
         cd back-hotel
         python -m unittest test.test_integration
+    - name: prepare e2e test
+      run: |
+        mysql --host 127.0.0.1 --user root -root bookhotel < bdd_test.sql
     - name: deploy
       run: |
         echo "deploy back api"
